--- a/client/src/pages/ProfilePage/style.css
+++ b/client/src/pages/ProfilePage/style.css
@@ -1,8 +1,8 @@
-/* body {
+body {
   background-color: rgb(0, 0, 0);
   height: 100%;
 }
 .header {
   background-color: rgb(97, 5, 92);
   color: white;
-} */
+}
