--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,27 @@
+html {
+  /* min-height: 100%; */
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  /* min-height: 100%; */
 }
+
+p {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+  background-color: #141414;
+}
+
+.container {
+  margin-top: 40px;
+  background-color:#3F54B9;
+  border-radius: 20px;
+  border:5px solid #3F54B9;
+  color: rgb(207, 207, 207);
+}
+
