--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -1,3 +1,30 @@
-.navStyle {
+.navBarh3Tags {
+    /* background-color: #3F54B9; */
+    color: white;
+    margin-left: 30px;
+    margin-right: 5px;
+    font-size: 1.3em;
+    font-family: 'Permanent Marker', cursive;
+}
+
+.navbarColor {
     background-color: #3F54B9;
+    color: white;
+}
+
+.paddingForLogoToPushStuffRight {
+    padding-right: 20px;
+}
+
+.alignLoginLogoutRight {
+    /* margin: 0;
+    top: 0;
+    right: 60;
+    bottom:20; */
+    /* margin-left: auto; */
+    /* left: auto; */
+    /* position: fixed; */  
+    /* margin-left: 100%; */
+    margin-left: 20em;
+    color: white;
 }
