added assets/images folder to place icons and what not

--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -6,6 +6,12 @@
     /* The rest of the styles */
   }
 
+.widthFormControlInFooter{
+  width: 23%;
+  display: flex;
+  background-color: black;
+  }
+
 .alignFooterText {
   align-items: center;
   /* height: 10px; */
