--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -3,8 +3,9 @@
     color: white;
     margin-left: 30px;
     margin-right: 5px;
-    font-size: 1.3em;
-    font-family: 'Permanent Marker', cursive;
+    font-size: 2em;
+    /* font-family: 'Permanent Marker', cursive; */
+    font-family: 'Amatic SC', cursive;
 }
 
 .navbarColor {
@@ -25,6 +26,7 @@
     /* left: auto; */
     /* position: fixed; */  
     /* margin-left: 100%; */
-    margin-left: 20em;
+    margin-left: 28em;
     color: white;
+    font-family: 'Amatic SC', cursive;
 }
