--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,10 @@ html {
   /* min-height: 100%; */
 }
 
+h1 {
+  /* font-family: 'Amatic SC', cursive; */
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -11,6 +15,8 @@ body {
 
 p {
   font-family: Arial, Helvetica, sans-serif;
+  /* font-family: 'Amatic SC', cursive;
+  font-size: 2em; */
 }
 
 body {
@@ -26,8 +32,10 @@ body {
 }
 
 .permanentMarkerFont {
-  font-family: 'Permanent Marker', cursive;
+  /* font-family: 'Permanent Marker', cursive; */
+  font-family: 'Amatic SC', cursive;
   color: white;
-  font-size: 3.1em;
+  /* font-size: 3.1em; */
+  font-size: 4.5em;
 }
 
