login form area width reduce to normal lengths

--- a/client/src/pages/LoginPage/style.css
+++ b/client/src/pages/LoginPage/style.css
@@ -1,3 +1,13 @@
 .DescriptionOfPostText {
     color: white;
 }
+
+.widthOfLoginForm {
+    width: 20%;
+    align-items: center;
+    display: inline;
+}
+
+.marginFromTop {
+    margin-top: 1em;
+}
