moved login logout button back next to other nav stuff, will fix later

--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -18,7 +18,7 @@
     /* left: auto; */
     /* position: fixed; */  
     /* margin-left: 100%; */
-    margin-left: 28em;
+    /* margin-left: 28em; */
     color: white;
     font-family: 'Amatic SC', cursive;
 }
