--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -26,6 +26,7 @@
 .blackFooter {
   background-color: black;
   border: black;
+  margin-top: 100px;
   /* position: sticky; */
   /* position:absolute; */
   /* left:0;
