--- a/client/src/components/Profile/style.css
+++ b/client/src/components/Profile/style.css
@@ -3,3 +3,18 @@
     color: white;
 }
 
+.profileNameText {
+    font-size: 3em;
+    /* margin-bottom: .3em; */
+}
+
+.emailText {
+    font-size: 1.2em;
+    font-weight: bold;
+    margin: 0;
+}
+
+.bioText {
+    padding: 0;
+    margin-top: -2;
+}
