--- a/client/src/components/Profile/style.css
+++ b/client/src/components/Profile/style.css
@@ -1,6 +1,11 @@
 .alignLeft {
     text-align: left;
-    color: white;
+    color: rgb(10, 10, 10);
+}
+
+.bioText{
+    color: silver;
+    
 }
 
 .profileNameText {
@@ -18,3 +23,11 @@
     padding: 0;
     margin-top: -2;
 }
+
+.container{
+    
+}
+.bnt{
+    position: relative;
+}
+
