--- a/client/src/components/Profile/style.css
+++ b/client/src/components/Profile/style.css
@@ -1,10 +1,10 @@
 .alignLeft {
     text-align: left;
-    color: rgb(10, 10, 10);
+    color: white;
 }
 
 .bioText{
-    color: silver;
+    color: white;
     
 }
 
@@ -24,9 +24,6 @@
     margin-top: -2;
 }
 
-.container{
-    
-}
 .bnt{
     position: relative;
 }
