--- a/client/src/index.css
+++ b/client/src/index.css
@@ -55,6 +55,7 @@ p {
 .container {
   margin-top: 40px;
   padding-top: 15px;
+  padding-bottom: 15px;
   background-color: rgba(4, 5, 7, 0.7);
   border-radius: 20px;
   background-color: rgba(33, 36, 53, 0.7);
