--- a/client/src/components/UserInfoForm/style.css
+++ b/client/src/components/UserInfoForm/style.css
@@ -5,11 +5,14 @@
     border-radius: 20px;
     background-color: rgba(33, 36, 53, 0.7);
     color: rgb(207, 207, 207);
+    width: 50%;
+    display: inline-flex;
+    justify-content: center;
 }
 
 .widthOfLoginFormUserInfoForm {
-    width: 20%;
-    align-items: center;
+    width: 95%;
+    /* align-items: center; */
     display: inline;
 }
 
