--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -34,6 +34,12 @@
   margin-bottom: 0%;
 }
 
+.redSendArrowIcon {
+  margin-left: .5em;
+}
 
-
+.twitterFacebookMargins {
+  margin-left: .5em;
+  margin-right: .5em;
+}
 
