--- a/client/src/components/Profile/style.css
+++ b/client/src/components/Profile/style.css
@@ -1,17 +1,17 @@
 .alignLeft {
-    text-align: left;
+    text-align: center;
     color: white;
 }
 
 .bioText{
     color: white;
+    text-align: center;
     
 }
 
 .profileNameText {
     font-size: 3em;
-    /* margin-bottom: .3em; */
-}
+    }
 
 .emailText {
     font-size: 1.2em;
@@ -23,8 +23,12 @@
     padding: 0;
     margin-top: -2;
 }
-
-.bnt{
-    position: relative;
+.media-body{
+    margin-top: 30px;
 }
-
+.container{
+    margin-top: 30px;
+}
+img.mr-3{
+    margin-left: 16px;
+}
